  MagicHash-style type constructor to be succeeded by at
  least one character in the file.

* Fix long-standing bug where the parser would crash with
  an ugly "Internal error" error message if encountering
  an extra }.

* Report errors at the right place for function arity
  mismatches. Earlier they were reported at end of file,
  now they are reported where the function is declared.

1.13.1 --> 1.13.2
===============

* Fix the bug with the precedence of unary prefix minus.
  Previously it was resolved as binding more tightly
  than any infix operator, now it is correctly treated
  as having the same fixity as binary infix minus.


1.13.0 --> 1.13.1
===============

* Allow an optional semi before the closing tag of
  an element. This achieves a similar effect for
  XmlSyntax in do blocks as DoAndIfThenElse does for
  the if construct. No more need to indent the closing
  tag one step further than the opening tag.

* Add a dummy 'noLoc :: SrcLoc' to L.H.E.SrcLoc, to
  use when generating code. It could definitely be
  done more elegantly, but not without inducing another
  major version bump, so later.

* Fix a regression from 1.11.x where the parser would crash
  upon encountering non-simple class/data declaration
  heads, e.g. 'data A [a]'. Now fails with a parse error
  as intended.


1.12.0 --> 1.13.0
===============

* Add extensions DoAndIfThenElse and NPlusKPatterns to
  Language.Haskell.Exts.Extensions.

* DoAndIfThenElse is now supported, at long last,
  making HSE compatible with Haskell2010

* Introduce haskell98 and haskell2010 extension groups,
  exported from Language.Haskell.Exts.Extensions.

* Backwards-incompatible change: default parse mode
  is now to use haskell2010, which means the following
  features are recognized by default: DoAndIfThenElse,
  PatternGuards, ForeignFunctionInterface, EmptyDataDecls.
  NPlusKPatterns is no longer recognized by default.


** 1.12.x

1.11.1 --> 1.12.0
===============
